--- a/info.yaml
+++ b/info.yaml
@@ -16,38 +16,41 @@ project:
   # List your project's source files here. Source files must be in ./src and you must list each source file separately, one per line:
   source_files:        
     - "tt_um_factory_test.v"
+    - "CIC_ADPCM_Wrapper.v"
+    - "CICDecimatorVerilogBlock.v"
+    - "ima_adpcm_enc.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: "sel"
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
+  ui[0]: "clk"
+  ui[1]: "slow_clk"
+  ui[2]: "block_enable"
+  ui[3]: "pdm_in"
   ui[4]: ""
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
 
   # Outputs
-  uo[0]: "data_o[0]"
-  uo[1]: "data_o[1]"
-  uo[2]: "data_o[2]"
-  uo[3]: "data_o[3]"
-  uo[4]: "data_o[4]"
-  uo[5]: "data_o[5]"
-  uo[6]: "data_o[6]"
-  uo[7]: "data_o[7]"
+  uo[0]: "outValid"
+  uo[1]: ""
+  uo[2]: ""
+  uo[3]: ""
+  uo[4]: "encPcm[0]"
+  uo[5]: "encPcm[1]"
+  uo[6]: "encPcm[2]"
+  uo[7]: "encPcm[3]"
 
   # Bidirectional pins
-  uio[0]: "data_i[0] / counter_o[0]"
-  uio[1]: "data_i[1] / counter_o[1]"
-  uio[2]: "data_i[2] / counter_o[2]"
-  uio[3]: "data_i[3] / counter_o[3]"
-  uio[4]: "data_i[4] / counter_o[4]"
-  uio[5]: "data_i[5] / counter_o[5]"
-  uio[6]: "data_i[6] / counter_o[6]"
-  uio[7]: "data_i[7] / counter_o[7]"
+  uio[0]: ""
+  uio[1]: ""
+  uio[2]: ""
+  uio[3]: ""
+  uio[4]: ""
+  uio[5]: ""
+  uio[6]: ""
+  uio[7]: ""
 
 # Do not change!
 yaml_version: 6
