--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information
 project:
-  title:        "TinyTapeout 06 Factory Test"      # Project title
-  author:       "Sylvain Munaut"      # Your name
+  title:        "ADPCM Encoder Audio Compressor"      # Project title
+  author:       "Charlie Hess, Emil Ivanov"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "Factory test module"      # One line description of what your project does
+  description:  "Accepts a microphone PDM input and returns an ADPCM encoded/compressed ouput"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
